--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,7 @@
 project:
   type: website
   output-dir: docs
-  pre-render: src/R/combine-data-tables.R
+  # pre-render: src/R/combine-data-tables.R
 
 website:
   title: "USDA SEP Fellows R Workshop"
